refactor(event, stats): optimize event service performance and fix stats client